--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,18 +6,11 @@
 
 body {
     background-image: url("../img/fundo2.jpg");
-    /*background-size: auto 100vh;*/
     font-family: 'Roboto', sans-serif;
-    
-}
-
-header {
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
+/* Barra de menu */
 .menu {
     background:#02013d;
     margin: 10px;
@@ -40,28 +33,40 @@ footer li,
 }
 
 footer a,
+footer p,
 .menu a {
     text-decoration: none;
     padding: 10px;
     color: orange;
 }
 
+/* Nodificações com o cursor*/
 a:hover {
     text-decoration: underline;
+}
+
+/*Apresentação do site*/
+header {
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*Corpo do site*/
+main {
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 #perfil{
     width: 150px; 
     height: 145px;
-    /*display: block;*/
     background-color: grey;
     border-radius: 200px 200px 200px 200px;
-    /*margin-left: 44vw;
-    margin-right: 30vw;
-    margin-top: 50px;
-    margin-bottom: 40px;*/
     margin: 0px;
 }
+    
 .apresentacao,
 .site-subtitle,
 .site-title {
@@ -69,37 +74,20 @@ a:hover {
     text-align: center;
     margin:10px;
 }
-
+    
 .site-subtitle {
     font-style: italic;
 }
 
-main {
-    margin-left: 100px;
-    margin-right: 100px;
-
-}
-
-h2 {
-    color: whitesmoke;
-    margin:120px 30px 50px;
-}
-
-article {
-    height: 100vh;
-    align-items:center;
+.sobre {
     justify-content:center;
-
 }
 
-article p {
+.sobre p {
     color: whitesmoke;
-    margin: 30px opx;
-}
-
-section{
-    height: 100vh;
-    
+    margin: 10vh 5vh;
+    border: 3px solid #D2691E;
+    padding: 5vh;
 }
 
 .grip {
@@ -109,11 +97,8 @@ section{
     text-align: center;
 }
 
+/* Configurações de site responsivo de no maximo 560 pixel */
 @media (max-width: 560px) {
-    section{
-        height: 170vh;
-    }
-
     footer ul{
         display: block; 
         font-size: 25px;
@@ -135,13 +120,20 @@ section{
 
     .site-subtitle,
     .site-title {
-    font-size: 40px;
+    font-size: 30px;
   }
 
     body {
-    font-size: 30px;
+    font-size: 20px;
+    }
+
+    .sobre p {
+        margin: 10vh 0px;
+        padding: 1vh;
     }
   }
+
+  /* Configurações de site responsivo de no maximo 880 e minimo de 560 pixel */
 @media (min-width: 560px) and (max-width: 880px) {
     .grid {
     display: grid;
@@ -174,6 +166,7 @@ section{
 
   }
   
+  /* Configurações de site responsivo de no maximo 1000 e minimo de 880 pixel */
 @media (min-width: 880px) and (max-width: 1000px){
     .grid {
         display: grid;  
@@ -202,6 +195,7 @@ section{
 
 }
 
+/* Configurações de site responsivo de no minimo de 1000 pixel */
 @media (min-width: 1000px){
   .grid {
       display: grid;
@@ -217,18 +211,28 @@ section{
 
   }
 
+.portfolio h2 {
+    color: whitesmoke;
+    margin:10px;
+}
+
 .img-portfolio {
     width: 180px;
     height: 180px;
     border-radius: 150px;
     gap: 5em;
-    /*margin: 100px 50px 5px;*/
     text-align: center;
-    border-bottom: 3px solid orange;
-    border-top: 3px solid orange;
-    border-left: 3px solid orange;
-    border-right: 3px solid orange;
+    margin-top: 10vh;
+    border-bottom: 3px solid#D2691E;
+    border-top: 3px solid #D2691E;
+    border-left: 3px solid #D2691E;
+    border-right: 3px solid #D2691E;
     
+}
+
+/* Configuração de imagens */
+.grip {
+    height: 70vh;
 }
 
 figcaption {
@@ -238,14 +242,14 @@ figcaption {
 }
 
 figure {
-    text-align: center
-    
+    text-align: center;
 }
 
 figure a {
-    color: orange;
+    color: #D2691E;
 }
 
+/* Rodapé */
 footer {
     background:#02013d;
     margin: 10px;   
